--- a/myapp/package.json
+++ b/myapp/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^6.14.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -55,6 +56,7 @@
     "@types/eslint": "^7.2.6",
     "@types/node-sass": "^4.11.1",
     "@types/prettier": "^2.1.6",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/testing-library__jest-dom": "^5.9.5",
