--- a/myapp/package.json
+++ b/myapp/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "dayjs": "^1.10.4",
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.14.1",
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.31",
     "@types/eslint": "^7.2.6",
     "@types/node-sass": "^4.11.1",
     "@types/prettier": "^2.1.6",
